[package]
name = "tdo-export"
version = "0.2.1"
authors = ["Felix Wittwer <dev@felixwittwer.de>", "Felix Döring <development@felixdoering.com>"]
description = "The export module for tdo"

homepage = "https://tdolist.de/tdo"
repository = "https://github.com/tdolist/tdo-export"
documentation = "https://docs.rs/crate/tdo-export"

license = "MIT"
keywords = ["todo", "tdo", "tdolist", "terminal"]
readme = "README.md"

include = [".gitignore", ".travis.yml", "Cargo.toml", "src/*.rs"]

[dependencies]
tdo-core = "0.2"
libc = "0.2"
colored = "1.4"
prettytable-rs = "0.6"
reqwest = "0.5"
